Closed Bug 1495735 Opened 6 years ago Closed 6 years ago

media devtools no longer showing accurate audio info

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox-esr60 --- wontfix
firefox62 --- wontfix
firefox63 --- wontfix
firefox64 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

(Keywords: regression)

Attachments

(1 file)

When we read a HE-AAC audio, the metadata typically indicates this as being a 24kHz file, upon decoding the first frame, we will mark it as 48kHz

In bug 1454630 we modified the MediaFormatReader::GetMozDebugReaderData to always return the value of the current trackinfo, but this always what is found in the metadata, and not always the value found in the samples returned.
Also fix a long-term data race where we could read and write on mInfo.{mVideo,mAudio} on different task queues.
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/34bf7a591f0e
Properly report updated media details. r=bryce
https://hg.mozilla.org/mozilla-central/rev/34bf7a591f0e
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Assignee: nobody → jyavenard
Flags: needinfo?(jyavenard)
Given that we're building the RC next week, let's let this ride the trains.
Flags: needinfo?(jyavenard)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: